--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,6 @@
 #root {
-  max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
-  text-align: center;
 }
 
 .logo {
@@ -40,3 +38,82 @@
 .read-the-docs {
   color: #888;
 }
+
+.avater {
+  border-radius: 50%;
+}
+
+.col {
+  flex: 50%;
+}
+
+.row {
+  display: flex;
+}
+
+.content {
+  text-align: left;
+  font-size: 30px;
+}
+
+.route {
+  margin-top:5px
+}
+
+#stopQuery {
+  text-align: center;
+
+}
+
+.result {
+  font-size:1em;
+}
+
+.dayBlock {
+  border: 1px solid white;
+  font-size: 40px;
+  display: flex;
+  align-items: center;
+  min-width:20em;
+  padding-right:1em;
+}
+
+.dayheader {
+  min-width: 6.5em;
+  margin-left:1em;
+}
+
+.timeBar {
+  border: 1px solid white;
+  margin-left:1em;
+  display:flex;
+}
+
+.timeBlock {
+  height: 0.8em;
+  width: 0.8em;
+  background-color: white;
+}
+
+.legend {
+  border: 1px solid white;
+  text-align: center;
+}
+
+.legendItem {
+  display:flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.legendItem div {
+  margin: 0.5em;
+}
+
+.colorCircle {
+  width:3em;
+  height:3em;
+  border-radius: 50%;
+}
+
+
